--- a/Odin-Recipes/Landing-Page/styles.css
+++ b/Odin-Recipes/Landing-Page/styles.css
@@ -122,7 +122,6 @@
 .info-abilities {
     display: flex;
     flex-direction: row;
-    
     justify-content: space-around;
     width: 75%;
 }
@@ -146,8 +145,32 @@
 }
 
 .quote-block {
+    padding-top: 40px;
+    padding-bottom: 30px;
+    background-color: #2C2E3A;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+}
+
+#quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    border: 4px solid #3E25CE;
+    border-radius: 25px;
+    background-color: #FF5EFF;
+}
+
+.quote-block blockquote {
+    color: white;
+    font-size: 50px;
+    padding: 15px;
+}
+
+.quote-block figcaption {
+    color: cyan;
+    font-size: 40px;
+    padding-left: 60px;
 }
