--- a/Odin-Recipes/Landing-Page/styles.css
+++ b/Odin-Recipes/Landing-Page/styles.css
@@ -50,6 +50,7 @@
 .main-block {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #banner {
@@ -110,6 +111,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: #2C2E3A;
+    width: 100%;
 }
 
 #info-block-title {
@@ -151,13 +153,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 #quote {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 35%;
     border: 4px solid #3E25CE;
     border-radius: 25px;
     background-color: #FF5EFF;
@@ -173,4 +176,45 @@
     color: cyan;
     font-size: 40px;
     padding-left: 60px;
+}
+
+.signup {
+    background-color: #2C2E3A;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.signup-block {
+    background-color: cyan;
+    border: 1px solid black;
+    border-radius: 25px;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#signup-message {
+    font-size: 20px;
+    color: #3E25CE;
+}
+
+.footer {
+    background-color: #FF5EFF;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer p {
+    font-size: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
