--- a/Odin-Recipes/Landing-Page/styles.css
+++ b/Odin-Recipes/Landing-Page/styles.css
@@ -7,6 +7,7 @@
 .header-block {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     background-color:#2C2E3A;
     justify-content: space-around;
     align-items: center;
@@ -23,6 +24,7 @@
 .header-link-block {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     background-color: #FF5EFF;
     height: 100%;
     align-items: center;
@@ -34,6 +36,7 @@
     width: 130px;
     border: 1px solid #FF5EFF;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
@@ -124,6 +127,7 @@
 .info-abilities {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     width: 75%;
 }
@@ -134,6 +138,7 @@
     align-items: center;
     padding-top: 15px;
     padding-bottom: 15px;
+    margin-top: 10px;
     border: solid #3E25CE 3px;
     width: 175px;
     background-color: #9836FF;
@@ -228,3 +233,42 @@
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+@media only screen and (max-width: 900px) {
+    .header-block {
+        background-color: white;
+        flex-direction: column;
+    }
+    #logo {
+        padding-right: 0;
+    }
+    .title-block {
+        flex-direction: column;
+        align-items: center;
+    }
+    .title-left {
+        align-content: center;
+        padding-bottom: 15px;
+    }
+
+    #quote {
+        width: 70%;
+    }
+
+    .quote-block blockquote {
+        font-size: 30px;
+    }
+
+    .quote-block figcaption {
+        font-size: 20px;
+    }
+
+    .signup-block {
+        flex-direction: column;
+        align-content: center;
+    }
+
+    #button-bottom {
+        margin-top: 10px;
+    }
+  }
