--- a/Javascript/Etch-A-Sketch/sketch.css
+++ b/Javascript/Etch-A-Sketch/sketch.css
@@ -3,18 +3,47 @@
     margin: 0;
 }
 
+#title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#title h1 {
+    text-transform: uppercase;
+    padding-bottom: 20px;
+}
+
+#title button {
+    width: 100px;
+    height: 30px;
+    text-transform: uppercase;
+}
+
 #main {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    background-color: red;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-top: 1px solid blue;
 }
 
-#main div {
+.etch-row {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
-#main div div {
+.etch-item {
     width: 50px;
     height: 50px;
     border: 1px solid black;
+    background-color: white;
 }
