--- a/Javascript/Etch-A-Sketch/sketch.css
+++ b/Javascript/Etch-A-Sketch/sketch.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    background-color: #00a7c7;
 }
 
 #title {
@@ -8,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: aqua;
+    background-color: #e76f3d;
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -16,6 +17,11 @@
 #title h1 {
     text-transform: uppercase;
     padding-bottom: 20px;
+    background-color: #e76f3d;
+}
+
+#title div {
+    background-color: #e76f3d;
 }
 
 #title button {
@@ -23,11 +29,38 @@
     height: 40px;
     text-transform: uppercase;
     font-size: 20px;
+    border: 2px solid black;
+}
+
+#resetButton {
+    margin-left: 20px;
+    
+}
+
+#columnForm {
+    margin-left: 20px;
 }
 
 #title form {
     padding-top: 20px;
-    font-size: 20px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #e76f3d;
+}
+
+#title form label {
+    background-color: #e76f3d;
+}
+
+#title form input {
+    height: 30px;
+    width: 70px;
+    font-size: 25px;
+    padding-left: 5px;
+    margin-left: 5px;
+    background-color: #f3e9e7;
 }
 
 #main {
@@ -36,10 +69,9 @@
     justify-content: center;
     width: 100%;
     max-width: 100%;
-    background-color: red;
     padding-top: 80px;
-    padding-bottom: 80px;
-    border-top: 1px solid blue;
+    padding-bottom: 180px;
+    border-top: 5px solid #f3e9e7;
 }
 
 .etch-row {
@@ -55,8 +87,13 @@
     background-color: white;
 } 
 
-@media only screen and (max-width: 1250px) {
-    #main {
-        background-color: blue;
+@media only screen and (max-width: 700px) {
+    #title form {
+        flex-direction: column;
+    }
+
+    #title form input {
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
 }
