--- a/Javascript/Etch-A-Sketch/sketch.css
+++ b/Javascript/Etch-A-Sketch/sketch.css
@@ -30,6 +30,11 @@
     text-transform: uppercase;
     font-size: 20px;
     border: 2px solid black;
+    background-color: #9bcfe0;
+}
+
+#title button:hover {
+    background-color: #00a7c7;
 }
 
 #resetButton {
